# SpeakForgeAI

./: README.md
Backend/speakforgeaibackend/: main.py  pyproject.toml
Backend/speakforgeaibackend/alembic/: env.py
Backend/speakforgeaibackend/alembic/versions/: 951c4a5d3411_initial_schema.py
Backend/speakforgeaibackend/core/: auth.py  config.py  database.py  dependencies.py  test_db.py
Backend/speakforgeaibackend/db_models/: evaluation.py  speaking_session.py  user.py
Backend/speakforgeaibackend/repositories/: evaluation_repository.py  session_repository.py  user_repository.py
Backend/speakforgeaibackend/routers/: evaluation_router.py  session_router.py  topic_router.py
Backend/speakforgeaibackend/schemas/: evaluation.py  session.py  user.py
Backend/speakforgeaibackend/services/: Evaluator.py  Session.py  TopicGenerator.py  evaluation_service.py  session_service.py  speech_service.py  topic_service.py  user_service.py
Backend/speakforgeaibackend/uploads/: recording.webm
Frontend/speakforgeai/: SETUP.md  middleware.js  package-lock.json  package.json
Frontend/speakforgeai/app/: layout.js  page.js
Frontend/speakforgeai/app/api/evaluate/: route.js
Frontend/speakforgeai/app/dashboard/: page.js
Frontend/speakforgeai/app/history/: page.js
Frontend/speakforgeai/app/login/: page.js
Frontend/speakforgeai/app/register/: page.js
Frontend/speakforgeai/app/session/: page.js
Frontend/speakforgeai/components/: Graph.js  Navbar.js  SessionRecorder.js
Frontend/speakforgeai/styles/: globals.css
Frontend/speakforgeai/utils/: api.js
(+1 files in other folders)
