[project]
name = "speakforgeaibackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.139.2",
    "faster-whisper>=1.2.1",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
